--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Global Styles */
 body {
-  background-color: navy;
+  background-color: #14014b;
   color: #fff;
   font-family: Arial, sans-serif;
   margin: 0;
